--- a/VacationPy.ipynb
+++ b/VacationPy.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1a20d70e",
+   "id": "5b83cd43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cf92a583",
+   "id": "e369e5ab",
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "267229d5",
+   "id": "6fef3ec5",
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "e81ad56f",
+   "id": "6dc4c455",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "e1951575",
+   "id": "9d9402a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "335cc4e6",
+   "id": "4fb1689f",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +247,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ab094da6",
+   "id": "ea4abfb0",
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "f4f10986",
+   "id": "20dc3fe2",
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "98c51d22",
+   "id": "bc4b0255",
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "a0d84958",
+   "id": "6d27dafc",
    "metadata": {},
    "outputs": [
     {
@@ -366,207 +366,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "62d2cea8",
+   "execution_count": 55,
+   "id": "9525035a",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>City_ID</th>\n",
-       "      <th>City</th>\n",
-       "      <th>Country</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Lat</th>\n",
-       "      <th>Lng</th>\n",
-       "      <th>Max Temp</th>\n",
-       "      <th>Humidity</th>\n",
-       "      <th>Cloudiness</th>\n",
-       "      <th>Wind Speed</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Buchanan</td>\n",
-       "      <td>LR</td>\n",
-       "      <td>2021-10-22 01:19:18</td>\n",
-       "      <td>5.8808</td>\n",
-       "      <td>-10.0467</td>\n",
-       "      <td>77.54</td>\n",
-       "      <td>86</td>\n",
-       "      <td>100</td>\n",
-       "      <td>3.11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>6</td>\n",
-       "      <td>Alofi</td>\n",
-       "      <td>NU</td>\n",
-       "      <td>2021-10-22 01:23:13</td>\n",
-       "      <td>-19.0595</td>\n",
-       "      <td>-169.9187</td>\n",
-       "      <td>78.69</td>\n",
-       "      <td>61</td>\n",
-       "      <td>75</td>\n",
-       "      <td>16.11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>11</td>\n",
-       "      <td>Sao Filipe</td>\n",
-       "      <td>CV</td>\n",
-       "      <td>2021-10-22 01:23:15</td>\n",
-       "      <td>14.8961</td>\n",
-       "      <td>-24.4956</td>\n",
-       "      <td>81.30</td>\n",
-       "      <td>63</td>\n",
-       "      <td>0</td>\n",
-       "      <td>4.29</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>25</td>\n",
-       "      <td>Hilo</td>\n",
-       "      <td>US</td>\n",
-       "      <td>2021-10-22 01:23:18</td>\n",
-       "      <td>19.7297</td>\n",
-       "      <td>-155.0900</td>\n",
-       "      <td>82.13</td>\n",
-       "      <td>64</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6.91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>27</td>\n",
-       "      <td>Vaini</td>\n",
-       "      <td>TO</td>\n",
-       "      <td>2021-10-22 01:22:16</td>\n",
-       "      <td>-21.2000</td>\n",
-       "      <td>-175.2000</td>\n",
-       "      <td>77.16</td>\n",
-       "      <td>88</td>\n",
-       "      <td>75</td>\n",
-       "      <td>10.36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>31</td>\n",
-       "      <td>Nanakuli</td>\n",
-       "      <td>US</td>\n",
-       "      <td>2021-10-22 01:19:25</td>\n",
-       "      <td>21.3906</td>\n",
-       "      <td>-158.1547</td>\n",
-       "      <td>82.35</td>\n",
-       "      <td>69</td>\n",
-       "      <td>40</td>\n",
-       "      <td>6.91</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>34</th>\n",
-       "      <td>34</td>\n",
-       "      <td>Kapaa</td>\n",
-       "      <td>US</td>\n",
-       "      <td>2021-10-22 01:23:20</td>\n",
-       "      <td>22.0752</td>\n",
-       "      <td>-159.3190</td>\n",
-       "      <td>82.38</td>\n",
-       "      <td>68</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1.99</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>37</th>\n",
-       "      <td>37</td>\n",
-       "      <td>Butaritari</td>\n",
-       "      <td>KI</td>\n",
-       "      <td>2021-10-22 01:23:21</td>\n",
-       "      <td>3.0707</td>\n",
-       "      <td>172.7902</td>\n",
-       "      <td>82.85</td>\n",
-       "      <td>71</td>\n",
-       "      <td>25</td>\n",
-       "      <td>13.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>38</th>\n",
-       "      <td>38</td>\n",
-       "      <td>Atuona</td>\n",
-       "      <td>PF</td>\n",
-       "      <td>2021-10-22 01:23:22</td>\n",
-       "      <td>-9.8000</td>\n",
-       "      <td>-139.0333</td>\n",
-       "      <td>77.88</td>\n",
-       "      <td>77</td>\n",
-       "      <td>17</td>\n",
-       "      <td>18.05</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39</th>\n",
-       "      <td>39</td>\n",
-       "      <td>Taoudenni</td>\n",
-       "      <td>ML</td>\n",
-       "      <td>2021-10-22 01:23:22</td>\n",
-       "      <td>22.6783</td>\n",
-       "      <td>-3.9836</td>\n",
-       "      <td>75.58</td>\n",
-       "      <td>29</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10.49</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    City_ID        City Country                 Date      Lat       Lng  \\\n",
-       "3         3    Buchanan      LR  2021-10-22 01:19:18   5.8808  -10.0467   \n",
-       "6         6       Alofi      NU  2021-10-22 01:23:13 -19.0595 -169.9187   \n",
-       "11       11  Sao Filipe      CV  2021-10-22 01:23:15  14.8961  -24.4956   \n",
-       "25       25        Hilo      US  2021-10-22 01:23:18  19.7297 -155.0900   \n",
-       "27       27       Vaini      TO  2021-10-22 01:22:16 -21.2000 -175.2000   \n",
-       "31       31    Nanakuli      US  2021-10-22 01:19:25  21.3906 -158.1547   \n",
-       "34       34       Kapaa      US  2021-10-22 01:23:20  22.0752 -159.3190   \n",
-       "37       37  Butaritari      KI  2021-10-22 01:23:21   3.0707  172.7902   \n",
-       "38       38      Atuona      PF  2021-10-22 01:23:22  -9.8000 -139.0333   \n",
-       "39       39   Taoudenni      ML  2021-10-22 01:23:22  22.6783   -3.9836   \n",
-       "\n",
-       "    Max Temp  Humidity  Cloudiness  Wind Speed  \n",
-       "3      77.54        86         100        3.11  \n",
-       "6      78.69        61          75       16.11  \n",
-       "11     81.30        63           0        4.29  \n",
-       "25     82.13        64           1        6.91  \n",
-       "27     77.16        88          75       10.36  \n",
-       "31     82.35        69          40        6.91  \n",
-       "34     82.38        68           1        1.99  \n",
-       "37     82.85        71          25       13.00  \n",
-       "38     77.88        77          17       18.05  \n",
-       "39     75.58        29           0       10.49  "
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "ValueError",
+     "evalue": "Can only compare identically-labeled Series objects",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-55-fb600f8a9d5f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Filter the dataset to find the cities that fit the criteria.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m preferred_cities_df = city_data_df.loc[(city_data_df[\"Max Temp\"] <= max_temp) & \\\n\u001b[0m\u001b[0;32m      3\u001b[0m                                        (city_data_df[\"Max Temp\"] >= min_temp)]\n\u001b[0;32m      4\u001b[0m \u001b[0mpreferred_cities_df\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\ops\\common.py\u001b[0m in \u001b[0;36mnew_method\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m     63\u001b[0m         \u001b[0mother\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mitem_from_zerodim\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mother\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     64\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 65\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mmethod\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mother\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     66\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mnew_method\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\arraylike.py\u001b[0m in \u001b[0;36m__le__\u001b[1;34m(self, other)\u001b[0m\n\u001b[0;32m     39\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0munpack_zerodim_and_defer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"__le__\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     40\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__le__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mother\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 41\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_cmp_method\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mother\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0moperator\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mle\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     42\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     43\u001b[0m     \u001b[1;33m@\u001b[0m\u001b[0munpack_zerodim_and_defer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"__gt__\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\anaconda3\\envs\\PythonData\\lib\\site-packages\\pandas\\core\\series.py\u001b[0m in \u001b[0;36m_cmp_method\u001b[1;34m(self, other, op)\u001b[0m\n\u001b[0;32m   4971\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4972\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mother\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mSeries\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_indexed_same\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mother\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 4973\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Can only compare identically-labeled Series objects\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   4974\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   4975\u001b[0m         \u001b[0mlvalues\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mextract_array\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mextract_numpy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: Can only compare identically-labeled Series objects"
+     ]
     }
    ],
    "source": [
@@ -579,7 +395,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "b1e6fd6d",
+   "id": "c3c0c222",
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "bab2baf9",
+   "id": "4a034a1d",
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "8e471f40",
+   "id": "f479b712",
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "7ef27fa4",
+   "id": "c2f989ab",
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "b83c210a",
+   "id": "385a57ed",
    "metadata": {},
    "outputs": [
     {
@@ -1175,7 +991,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "6aeeae64",
+   "id": "f594a76d",
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1026,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "923cab59",
+   "id": "8763d55d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1229,7 +1045,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "1c87d919",
+   "id": "dfdccb52",
    "metadata": {},
    "outputs": [
     {
@@ -1265,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8673f275",
+   "id": "1e128a2e",
    "metadata": {},
    "outputs": [],
    "source": []
